--- a/eric_extraction.ipynb
+++ b/eric_extraction.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#retrieve all movies from csv\n",
     "movies = pd.read_csv(\"Resources/tmdb_5000_movies.csv\")\n",
     "movies.head()"
    ]
@@ -27,6 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#filter for english language movies only\n",
+    "#some foreign language movies titles did not translate characters properly in the origina list\n",
     "en_movies = movies[movies[\"original_language\"]==\"en\"]\n",
     "en_movies.head()"
    ]
@@ -37,8 +40,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#retrieve all credits info (actors and other crew)\n",
     "credits = pd.read_csv(\"Resources/tmdb_5000_credits.csv\")\n",
     "credits.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#seperate director information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get top 5 actors of each movie"
    ]
   }
  ],
