extracting each actor in each movie

--- a/eric_extraction.ipynb
+++ b/eric_extraction.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "#dependencies\n",
     "import pandas as pd\n",
+    "import json\n",
     "from pyparsing import Word, alphas"
    ]
   },
@@ -60,7 +61,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get top 5 actors of each movie"
+    "#get top 5 actors of each movie\n",
+    "\n",
+    "#get movie ID and cast column\n",
+    "cast = credits[[\"movie_id\", \"cast\"]].copy()\n",
+    "cast.head()\n",
+    "\n",
+    "#isolate dictionary for each caster\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#testing for avatar\n",
+    "\n",
+    "#index 0 is first row. getting full cast info\n",
+    "data = cast[\"cast\"].loc[cast.index[0]]\n",
+    "\n",
+    "data_list = json.loads(data)\n",
+    "\n",
+    "five_list = data_list[:5]\n",
+    "\n",
+    "actor_id = [ sub['id'] for sub in five_list ]\n",
+    "actor_name = [ sub['name'] for sub in five_list ]\n",
+    "movie_id = cast[\"movie_id\"].loc[cast.index[0]]\n",
+    "\n",
+    "five_df = pd.DataFrame({'movie_id':movie_id,'actor_id':actor_id,'name': actor_name})\n",
+    "five_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in cast.iterrows():\n",
+    "    #get all actors into a list\n",
+    "    data = cast[\"cast\"].loc[cast.index[index]]\n",
+    "    data_list = json.loads(data)\n",
+    "\n",
+    "    #get movie id\n",
+    "    movie_id = cast[\"movie_id\"].loc[cast.index[index]]\n",
+    "\n",
+    "    #get top 5 billed actors in list\n",
+    "    five_list = data_list[:5]\n",
+    "\n",
+    "    #get seperate lists for id and names of actors\n",
+    "    actor_id = [ sub['id'] for sub in five_list ]\n",
+    "    actor_name = [ sub['name'] for sub in five_list ]\n",
+    "\n",
+    "    #combine lists into data frame\n",
+    "    five_df = pd.DataFrame({'movie_id':movie_id,'actor_id':actor_id,'name': actor_name})\n",
+    "    five_df\n",
+    "    "
    ]
   }
  ],
