Started working on movies_df in transform notebook

--- a/jacque_transform.ipynb
+++ b/jacque_transform.ipynb
@@ -219,6 +219,80 @@
     "\n",
     "director_df.head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Movies Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify which columns are needed\n",
+    "data = {'movie_id':en_movies['id'], 'title':en_movies['title']}\n",
+    "\n",
+    "# Create Director Dataframe\n",
+    "movie_df = pd.DataFrame(data=(data))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # Convert ids to integers\n",
+    "# movie_df['movie_id']=movie_df['movie_id'].astype(int)\n",
+    "\n",
+    "# # Save as csv\n",
+    "# movie_df.to_csv('csv_outputs\\movie_data.csv', index=False)\n",
+    "\n",
+    "movie_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Do we want more?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify which columns are needed\n",
+    "data = {'movie_id':en_movies['id'], 'title':en_movies['title'], 'release_date':en_movies['release_date'], 'revenue':en_movies['revenue'], 'tagline':en_movies['tagline'], 'average_vote':en_movies['vote_average']}\n",
+    "\n",
+    "# Create Director Dataframe\n",
+    "movie_big_df = pd.DataFrame(data=(data))\n",
+    "\n",
+    "# Convert revenue into dollars\n",
+    "\n",
+    "# # Convert ids to integers\n",
+    "# movie_big_df['movie_id']=movie_big_df['movie_id'].astype(int)\n",
+    "\n",
+    "# # Save as csv\n",
+    "# movie_big_df.to_csv('csv_outputs\\movie_big_data.csv', index=False)\n",
+    "\n",
+    "movie_big_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We will likely have to add more and append other columns from parsed Actors and Genres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
