creating list of actor credits

--- a/eric_extraction.ipynb
+++ b/eric_extraction.ipynb
@@ -99,6 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "credits_actor = pd.DataFrame()\n",
+    "\n",
     "for index, row in cast.iterrows():\n",
     "    #get all actors into a list\n",
     "    data = cast[\"cast\"].loc[cast.index[index]]\n",
@@ -112,12 +114,18 @@
     "\n",
     "    #get seperate lists for id and names of actors\n",
     "    actor_id = [ sub['id'] for sub in five_list ]\n",
-    "    actor_name = [ sub['name'] for sub in five_list ]\n",
+    "    #actort name is not needed as taht will be in seperate table\n",
+    "    #actor_name = [ sub['name'] for sub in five_list ]\n",
     "\n",
-    "    #combine lists into data frame\n",
-    "    five_df = pd.DataFrame({'movie_id':movie_id,'actor_id':actor_id,'name': actor_name})\n",
-    "    five_df\n",
-    "    "
+    "    #combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
+    "    five_df = pd.DataFrame({'movie_id':movie_id,'actor_id':actor_id})\n",
+    "    credits_actor = pd.concat([credits_actor, five_df], ignore_index=True)\n",
+    "\n",
+    "# check df\n",
+    "credits_actor.head(1000)\n",
+    "\n",
+    "# # Save as csv\n",
+    "credits_actor.to_csv('csv_outputs\\credits_actor.csv', index=False)   "
    ]
   }
  ],
