added csv: movies, keywords, directors, and movieids_keywords

--- a/jacque_transform.ipynb
+++ b/jacque_transform.ipynb
@@ -215,9 +215,91 @@
     "director_df['director_id']=director_df['director_id'].astype(int)\n",
     "\n",
     "# Save as csv\n",
-    "director_df.to_csv('csv_outputs\\cast.csv', index=False)\n",
+    "director_df.to_csv('csv_outputs\\directors.csv', index=False)\n",
     "\n",
     "director_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Keyword Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create sets to hold ids and names\n",
+    "ids_keyword = set()\n",
+    "\n",
+    "# Loop through genres rows and update sets\n",
+    "for row in en_movies['keywords']:\n",
+    "    keywords = json.loads(row)\n",
+    "    ids_keyword.update((i['id'], i['name']) for i in keywords)\n",
+    "\n",
+    "\n",
+    "# Print ids and genre lists\n",
+    "print(ids_keyword)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create keywords Dataframe\n",
+    "keywords_df = pd.DataFrame(columns=['kw_id', 'keyword'], data=(ids_keyword))\n",
+    "\n",
+    "# Convert ids to integers\n",
+    "keywords_df['kw_id']=keywords_df['kw_id'].astype(int)\n",
+    "\n",
+    "# Save as csv\n",
+    "keywords_df.to_csv('csv_outputs\\keywords.csv', index=False)\n",
+    "\n",
+    "keywords_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create df of movie ids and keywords\n",
+    "movie_keywords = en_movies[[\"id\", \"keywords\"]]\n",
+    "\n",
+    "# Create empty dataframe\n",
+    "movie_keywords_df = pd.DataFrame()\n",
+    "\n",
+    "for index, row in movie_keywords.iterrows():\n",
+    "    # Get all keywords into a list\n",
+    "    data = row['keywords']\n",
+    "        \n",
+    "    # Get movie id\n",
+    "    movie_id = row['id']\n",
+    "        \n",
+    "    # Get separate lists for id of keywords\n",
+    "    kw_id = [sub['id'] for sub in data_list]\n",
+    "    \n",
+    "    # Combine lists into data frame\n",
+    "    movieid_kws = pd.DataFrame({'movie_id': movie_id, 'kw_id': kw_id})\n",
+    "    \n",
+    "    # Concatenate to main DataFrame\n",
+    "    movie_keywords_df = pd.concat([movie_keywords_df, movieid_kws], ignore_index=True)\n",
+    "\n",
+    "# Convert ids to integers\n",
+    "movie_keywords_df['kw_id']=movie_keywords_df['kw_id'].astype(int)\n",
+    "\n",
+    "# Save as csv\n",
+    "movie_keywords_df.to_csv('csv_outputs\\movieids_keywords.csv', index=False)\n",
+    "    \n",
+    "# Check first 25 rows of the DataFrame\n",
+    "movie_keywords_df.head(25)"
    ]
   },
   {
@@ -234,57 +316,28 @@
    "outputs": [],
    "source": [
     "# Identify which columns are needed\n",
-    "data = {'movie_id':en_movies['id'], 'title':en_movies['title']}\n",
+    "data = {'movie_id':en_movies['id'], 'title':en_movies['title'], 'release_date_str':en_movies['release_date'], 'revenue':en_movies['revenue'], 'tagline':en_movies['tagline'], 'average_vote':en_movies['vote_average']}\n",
     "\n",
     "# Create Director Dataframe\n",
-    "movie_df = pd.DataFrame(data=(data))\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # Convert ids to integers\n",
-    "# movie_df['movie_id']=movie_df['movie_id'].astype(int)\n",
-    "\n",
-    "# # Save as csv\n",
-    "# movie_df.to_csv('csv_outputs\\movie_data.csv', index=False)\n",
-    "\n",
-    "movie_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Do we want more?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Identify which columns are needed\n",
-    "data = {'movie_id':en_movies['id'], 'title':en_movies['title'], 'release_date':en_movies['release_date'], 'revenue':en_movies['revenue'], 'tagline':en_movies['tagline'], 'average_vote':en_movies['vote_average']}\n",
-    "\n",
-    "# Create Director Dataframe\n",
-    "movie_big_df = pd.DataFrame(data=(data))\n",
+    "movies_df = pd.DataFrame(data=(data))\n",
     "\n",
     "# Convert revenue into dollars\n",
     "\n",
-    "# # Convert ids to integers\n",
-    "# movie_big_df['movie_id']=movie_big_df['movie_id'].astype(int)\n",
+    "# Convert ids to integers\n",
+    "movies_df['movie_id']=movies_df['movie_id'].astype(int)\n",
     "\n",
-    "# # Save as csv\n",
-    "# movie_big_df.to_csv('csv_outputs\\movie_big_data.csv', index=False)\n",
+    "# Convert release date column to datetime type\n",
+    "movies_df['release_date'] = pd.to_datetime(movies_df['release_date_str'])\n",
     "\n",
-    "movie_big_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### We will likely have to add more and append other columns from parsed Actors and Genres"
+    "# Drop the original release date column\n",
+    "movies_df.drop(columns=['release_date_str'], inplace=True)\n",
+    "\n",
+    "# Save as csv\n",
+    "movies_df.to_csv('csv_outputs\\movies.csv', index=False)\n",
+    "\n",
+    "movies_df.head(10)\n",
+    "\n",
+    "# movies_df.dtypes"
    ]
   },
   {
