--- a/jacque_transform.ipynb
+++ b/jacque_transform.ipynb
@@ -128,6 +128,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Create dataframe for Movie Ids and Genre Ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create df of movie ids and genres\n",
+    "movie_genres = en_movies[[\"id\", \"genres\"]]\n",
+    "\n",
+    "# Create empty dataframe\n",
+    "movie_genreids_df = pd.DataFrame()\n",
+    "\n",
+    "for index, row in movie_genres.iterrows():\n",
+    "    # Get all keywords into a list\n",
+    "    data = row['genres']\n",
+    "    data_list = json.loads(data)\n",
+    "        \n",
+    "    # Get movie id\n",
+    "    movie_id = row['id']\n",
+    "        \n",
+    "    # Get separate lists for id of keywords\n",
+    "    genre_id = [sub['id'] for sub in data_list]\n",
+    "    \n",
+    "    # Combine lists into data frame\n",
+    "    movieid_kws = pd.DataFrame({'movie_id': movie_id, 'genre_id': genre_id})\n",
+    "    \n",
+    "    # Concatenate to main DataFrame\n",
+    "    movie_genreids_df = pd.concat([movie_genreids_df, movieid_kws], ignore_index=True)\n",
+    "\n",
+    "# Convert ids to integers\n",
+    "movie_genreids_df['genre_id']=movie_genreids_df['genre_id'].astype(int)\n",
+    "\n",
+    "# Save as csv\n",
+    "movie_genreids_df.to_csv('csv_outputs\\movieids_genreids.csv', index=False)\n",
+    "    \n",
+    "# Check first 25 rows of the DataFrame\n",
+    "movie_genreids_df.head(25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Create Cast Dataframe"
    ]
   },
@@ -265,6 +311,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Dataframe for movie Ids and Keyword Ids"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -279,6 +332,7 @@
     "for index, row in movie_keywords.iterrows():\n",
     "    # Get all keywords into a list\n",
     "    data = row['keywords']\n",
+    "    data_list = json.loads(data)\n",
     "        \n",
     "    # Get movie id\n",
     "    movie_id = row['id']\n",
@@ -296,7 +350,7 @@
     "movie_keywords_df['kw_id']=movie_keywords_df['kw_id'].astype(int)\n",
     "\n",
     "# Save as csv\n",
-    "movie_keywords_df.to_csv('csv_outputs\\movieids_keywords.csv', index=False)\n",
+    "movie_keywords_df.to_csv('csv_outputs\\movieids_kwids.csv', index=False)\n",
     "    \n",
     "# Check first 25 rows of the DataFrame\n",
     "movie_keywords_df.head(25)"
