Cleaned up data and combined notebooks

--- a/jacque_transform.ipynb
+++ b/jacque_transform.ipynb
@@ -167,7 +167,7 @@
     "movie_genreids_df.to_csv('csv_outputs\\movieids_genreids.csv', index=False)\n",
     "    \n",
     "# Check first 25 rows of the DataFrame\n",
-    "movie_genreids_df.head(25)"
+    "movie_genreids_df.head(25)\n"
    ]
   },
   {
@@ -183,18 +183,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "credits_actor_name = pd.DataFrame()\n",
+    "\n",
+    "for index, row in credits.iterrows():\n",
+    "    #get all actors into a list\n",
+    "    data = credits[\"cast\"].loc[credits.index[index]]\n",
+    "    data_list = json.loads(data)\n",
+    "\n",
+    "    #get movie id\n",
+    "    movie_id = credits[\"movie_id\"].loc[credits.index[index]]\n",
+    "\n",
+    "    #get top 5 billed actors in list\n",
+    "    five_list = data_list[:5]\n",
+    "\n",
+    "    #get seperate lists for id and names of actors\n",
+    "    actor_id = [ sub['id'] for sub in five_list ]\n",
+    "    actor_name = [ sub['name'] for sub in five_list ]\n",
+    "\n",
+    "    #combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
+    "    five_df = pd.DataFrame({'movie_id':movie_id,'actor_id':actor_id, 'name':actor_name})\n",
+    "    credits_actor_name = pd.concat([credits_actor_name, five_df], ignore_index=True)\n",
+    "\n",
+    "# check df\n",
+    "credits_actor_name.head(20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create set to hold ids and actors\n",
     "ids_cast = set()\n",
     "\n",
     "\n",
     "# Loop through cast rows and update set\n",
-    "for row in credits['cast']:\n",
-    "    actor = json.loads(row)\n",
-    "    ids_cast.update((i['id'], i['name']) for i in actor)\n",
+    "for index, row in credits_actor_name.iterrows():\n",
+    "    \n",
+    "    # Extract actor ID and name from the current row\n",
+    "    actor_id = row['actor_id']\n",
+    "    actor_name = row['name']\n",
+    "    \n",
+    "    # Add actor ID and name to the set\n",
+    "    ids_cast.add((actor_id, actor_name))\n",
     "\n",
-    "\n",
-    "\n",
-    "# Print ids and actors lists\n",
     "print(ids_cast)"
    ]
   },
@@ -234,10 +268,10 @@
     "\n",
     "# Loop through crew rows and update set\n",
     "for row in credits['crew']:\n",
-    "    directors = json.loads(row)\n",
+    "    crew = json.loads(row)\n",
     "         \n",
     "# Loop through crew members\n",
-    "    for crew_member in directors:\n",
+    "    for crew_member in crew:\n",
     "    # Find members with 'job':'director'\n",
     "        if crew_member.get('job') == \"Director\":\n",
     "        # If Director, update set\n",
@@ -264,6 +298,61 @@
     "director_df.to_csv('csv_outputs\\directors.csv', index=False)\n",
     "\n",
     "director_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a Dataframe for Movie Ids and Director Ids "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create df of movie ids and crew\n",
+    "movie_crew = credits[[\"movie_id\", \"crew\"]]\n",
+    "\n",
+    "# Create empty dataframe\n",
+    "movieid_directorid_df = pd.DataFrame()\n",
+    "\n",
+    "for index, row in movie_crew.iterrows():\n",
+    "    # Get all keywords into a list\n",
+    "    data = row['crew']\n",
+    "    data_list = json.loads(data)\n",
+    "\n",
+    "    # Get movie id\n",
+    "    movie_id = row['movie_id']\n",
+    "\n",
+    "    # Empty list to store director IDs\n",
+    "    director_ids = []\n",
+    "\n",
+    "    for crew_member in data_list:\n",
+    "    # Find members with 'job':'director'\n",
+    "        if crew_member.get('job') == \"Director\":    \n",
+    "    \n",
+    "            # Get separate lists for id of directors\n",
+    "            director_ids.append(crew_member.get('id'))\n",
+    "\n",
+    "            \n",
+    "   # Create a DataFrame for the current movie ID and director IDs\n",
+    "    movie_director = pd.DataFrame({'movie_id': [movie_id] * len(director_ids), 'director_id': director_ids})\n",
+    "    \n",
+    "    # Concatenate to main DataFrame\n",
+    "    movieid_directorid_df = pd.concat([movieid_directorid_df, movie_director], ignore_index=True)\n",
+    "\n",
+    "# Convert ids to integers\n",
+    "movieid_directorid_df['movie_id']=movieid_directorid_df['movie_id'].astype(int)\n",
+    "movieid_directorid_df['director_id']=movieid_directorid_df['director_id'].astype(int)\n",
+    "\n",
+    "# Save as csv\n",
+    "movieid_directorid_df.to_csv('csv_outputs\\movieids_director_ids.csv', index=False)\n",
+    "    \n",
+    "# Check first 25 rows of the DataFrame\n",
+    "movieid_directorid_df.head(10)"
    ]
   },
   {
