Fixed nulls in release_date

--- a/extract_transform.ipynb
+++ b/extract_transform.ipynb
@@ -549,19 +549,21 @@
     "# Convert ids to integers\n",
     "movies_df['movie_id']=movies_df['movie_id'].astype(int)\n",
     "\n",
+    "# Fill null values in tagline and release_date\n",
+    "movies_df['tagline'] = movies_df['tagline'] .fillna('*No Tag Line*')\n",
+    "movies_df['release_date_str'] = movies_df['release_date_str'] .fillna(0000-00-00)\n",
+    "\n",
     "# Convert release date column to datetime type\n",
-    "movies_df['release_date'] = pd.to_datetime(movies_df['release_date_str'])\n",
+    "movies_df['release_date'] = pd.to_datetime(movies_df['release_date_str'], format='mixed')\n",
     "\n",
     "# Drop the original release date column\n",
     "movies_df.drop(columns=['release_date_str'], inplace=True)\n",
     "\n",
-    "# Fill null values in tagline\n",
-    "movies_df['tagline'] = movies_df['tagline'] .fillna('*No Tag Line*')\n",
     "\n",
     "# Save as csv\n",
     "movies_df.to_csv('csv_outputs\\movies.csv', index=False)\n",
     "\n",
-    "movies_df.head(25)"
+    "movies_df.head(20)"
    ]
   },
   {
