fix credits.csv issue

--- a/extract_transform.ipynb
+++ b/extract_transform.ipynb
@@ -39,7 +39,19 @@
     "#filter for english language movies only\n",
     "#some foreign language movies titles did not translate characters properly in the origina list\n",
     "en_movies = movies[movies[\"original_language\"]==\"en\"]\n",
-    "en_movies.head()"
+    "en_movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a list of movie ids\n",
+    "movie_id_list = en_movies['id'].tolist()\n",
+    "\n",
+    "print(movie_id_list)"
    ]
   },
   {
@@ -49,8 +61,8 @@
    "outputs": [],
    "source": [
     "#retrieve all credits info (actors and other crew)\n",
-    "credits = pd.read_csv(\"Resources/tmdb_5000_credits.csv\")\n",
-    "credits.head()"
+    "credits_orig = pd.read_csv(\"Resources/tmdb_5000_credits.csv\")\n",
+    "credits_orig.head()"
    ]
   },
   {
@@ -58,6 +70,17 @@
    "metadata": {},
    "source": [
     "____________"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credits= credits_orig[credits_orig['movie_id'].isin(movie_id_list)]\n",
+    "\n",
+    "credits"
    ]
   },
   {
@@ -227,32 +250,62 @@
    "outputs": [],
    "source": [
     "\n",
+    "# credits_actor_name = pd.DataFrame()\n",
+    "\n",
+    "# for index, row in credits.iterrows():\n",
+    "#     #get all actors into a list\n",
+    "#     data = credits[\"cast\"].loc[credits.index[index]]\n",
+    "#     data_list = json.loads(data)\n",
+    "\n",
+    "#     #get movie id\n",
+    "#     movie_id = credits[\"movie_id\"].loc[credits.index[index]]\n",
+    "\n",
+    "#     #get top 5 billed actors in list\n",
+    "#     five_list = data_list[:5]\n",
+    "\n",
+    "#     #get seperate lists for id and names of actors\n",
+    "#     actor_id = [ sub['id'] for sub in five_list ]\n",
+    "#     actor_name = [ sub['name'] for sub in five_list ]\n",
+    "\n",
+    "#     #combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
+    "#     five_df = pd.DataFrame({'movie_id':movie_id,'actor_id':actor_id, 'name':actor_name})\n",
+    "#     credits_actor_name = pd.concat([credits_actor_name, five_df], ignore_index=True)\n",
+    "\n",
+    "# # Convert ids to integers\n",
+    "# credits_actor_name['actor_id']=credits_actor_name['actor_id'].astype(int)\n",
+    "\n",
+    "# # check df\n",
+    "# credits_actor_name.head(20)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Assuming credits is your original DataFrame\n",
     "credits_actor_name = pd.DataFrame()\n",
     "\n",
     "for index, row in credits.iterrows():\n",
-    "    #get all actors into a list\n",
-    "    data = credits[\"cast\"].loc[credits.index[index]]\n",
+    "    # Get all actors into a list\n",
+    "    data = row[\"cast\"]\n",
     "    data_list = json.loads(data)\n",
     "\n",
-    "    #get movie id\n",
-    "    movie_id = credits[\"movie_id\"].loc[credits.index[index]]\n",
+    "    # Get movie id\n",
+    "    movie_id = row[\"movie_id\"]\n",
     "\n",
-    "    #get top 5 billed actors in list\n",
+    "    # Get top 5 billed actors in list\n",
     "    five_list = data_list[:5]\n",
     "\n",
-    "    #get seperate lists for id and names of actors\n",
-    "    actor_id = [ sub['id'] for sub in five_list ]\n",
-    "    actor_name = [ sub['name'] for sub in five_list ]\n",
+    "    # Get separate lists for id and names of actors\n",
+    "    actor_id = [sub['id'] for sub in five_list]\n",
+    "    actor_name = [sub['name'] for sub in five_list]\n",
     "\n",
-    "    #combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
-    "    five_df = pd.DataFrame({'movie_id':movie_id,'actor_id':actor_id, 'name':actor_name})\n",
+    "    # Combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
+    "    five_df = pd.DataFrame({'movie_id': movie_id, 'actor_id': actor_id, 'name': actor_name})\n",
     "    credits_actor_name = pd.concat([credits_actor_name, five_df], ignore_index=True)\n",
     "\n",
     "# Convert ids to integers\n",
-    "credits_actor_name['actor_id']=credits_actor_name['actor_id'].astype(int)\n",
+    "credits_actor_name['actor_id'] = credits_actor_name['actor_id'].astype(int)\n",
     "\n",
-    "# check df\n",
-    "credits_actor_name.head(20)\n"
+    "# Check df\n",
+    "credits_actor_name.head(20)"
    ]
   },
   {
@@ -320,7 +373,7 @@
     "# Save as csv\n",
     "cast_df.to_csv('csv_outputs\\\\actors.csv', index=False)\n",
     "\n",
-    "cast_df.head(10)"
+    "cast_df.head(10)\n"
    ]
   },
   {
@@ -565,13 +618,6 @@
     "\n",
     "movies_df.head(20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
