remove duplicate actor ids

--- a/extract_transform.ipynb
+++ b/extract_transform.ipynb
@@ -84,6 +84,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list =[67373]\n",
+    "test= credits_orig[credits_orig['movie_id'].isin(test_list)]\n",
+    "\n",
+    "print(test['cast'].iloc[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,7 +143,7 @@
     "genres_df['genre_id']=genres_df['genre_id'].astype(int)\n",
     "\n",
     "# Save as csv\n",
-    "genres_df.to_csv('csv_outputs\\genres.csv', index=False)\n",
+    "# genres_df.to_csv('csv_outputs\\genres.csv', index=False)\n",
     "\n",
     "genres_df"
    ]
@@ -253,33 +265,34 @@
     "# credits_actor_name = pd.DataFrame()\n",
     "\n",
     "# for index, row in credits.iterrows():\n",
-    "#     #get all actors into a list\n",
-    "#     data = credits[\"cast\"].loc[credits.index[index]]\n",
+    "#     # Get all actors into a list\n",
+    "#     data = row[\"cast\"]\n",
     "#     data_list = json.loads(data)\n",
     "\n",
-    "#     #get movie id\n",
-    "#     movie_id = credits[\"movie_id\"].loc[credits.index[index]]\n",
+    "#     # Get movie id\n",
+    "#     movie_id = row[\"movie_id\"]\n",
     "\n",
-    "#     #get top 5 billed actors in list\n",
+    "#     # Get top 5 billed actors in list\n",
     "#     five_list = data_list[:5]\n",
     "\n",
-    "#     #get seperate lists for id and names of actors\n",
-    "#     actor_id = [ sub['id'] for sub in five_list ]\n",
-    "#     actor_name = [ sub['name'] for sub in five_list ]\n",
+    "#     # Get separate lists for id and names of actors\n",
+    "#     actor_id = [sub['id'] for sub in five_list]\n",
+    "#     actor_name = [sub['name'] for sub in five_list]\n",
     "\n",
-    "#     #combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
-    "#     five_df = pd.DataFrame({'movie_id':movie_id,'actor_id':actor_id, 'name':actor_name})\n",
+    "#     # Combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
+    "#     five_df = pd.DataFrame({'movie_id': movie_id, 'actor_id': actor_id, 'name': actor_name})\n",
     "#     credits_actor_name = pd.concat([credits_actor_name, five_df], ignore_index=True)\n",
     "\n",
     "# # Convert ids to integers\n",
-    "# credits_actor_name['actor_id']=credits_actor_name['actor_id'].astype(int)\n",
+    "# credits_actor_name['actor_id'] = credits_actor_name['actor_id'].astype(int)\n",
     "\n",
-    "# # check df\n",
+    "# # Check df\n",
     "# credits_actor_name.head(20)\n",
     "\n",
+    "# To get only unique ids in five_list:\n",
+    "import pandas as pd\n",
+    "import json\n",
     "\n",
-    "\n",
-    "# Assuming credits is your original DataFrame\n",
     "credits_actor_name = pd.DataFrame()\n",
     "\n",
     "for index, row in credits.iterrows():\n",
@@ -290,22 +303,43 @@
     "    # Get movie id\n",
     "    movie_id = row[\"movie_id\"]\n",
     "\n",
-    "    # Get top 5 billed actors in list\n",
-    "    five_list = data_list[:5]\n",
+    "    # Initialize an empty set to keep track of seen actor IDs\n",
+    "    seen_ids = set()\n",
+    "\n",
+    "    # Initialize an empty list to store unique actor data\n",
+    "    unique_actors = []\n",
+    "\n",
+    "    # Iterate through the cast data to get unique actors\n",
+    "    for actor in data_list:\n",
+    "        actor_id = actor['id']\n",
+    "        actor_name = actor['name']\n",
+    "\n",
+    "        # Check if actor_id is not in seen_ids\n",
+    "        if actor_id not in seen_ids:\n",
+    "            # Add actor_id to seen_ids\n",
+    "            seen_ids.add(actor_id)\n",
+    "            # Append the unique actor data to unique_actors\n",
+    "            unique_actors.append({'id': actor_id, 'name': actor_name})\n",
+    "\n",
+    "        # Break the loop if we have 5 unique actors\n",
+    "        if len(unique_actors) == 5:\n",
+    "            break\n",
     "\n",
     "    # Get separate lists for id and names of actors\n",
-    "    actor_id = [sub['id'] for sub in five_list]\n",
-    "    actor_name = [sub['name'] for sub in five_list]\n",
+    "    actor_id = [actor['id'] for actor in unique_actors]\n",
+    "    actor_name = [actor['name'] for actor in unique_actors]\n",
     "\n",
-    "    # Combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
+    "    # Create a DataFrame for the top 5 unique actors\n",
     "    five_df = pd.DataFrame({'movie_id': movie_id, 'actor_id': actor_id, 'name': actor_name})\n",
+    "\n",
+    "    # Concatenate the DataFrame to credits_actor_name\n",
     "    credits_actor_name = pd.concat([credits_actor_name, five_df], ignore_index=True)\n",
     "\n",
     "# Convert ids to integers\n",
     "credits_actor_name['actor_id'] = credits_actor_name['actor_id'].astype(int)\n",
     "\n",
     "# Check df\n",
-    "credits_actor_name.head(20)"
+    "credits_actor_name\n"
    ]
   },
   {
