--- a/eric_extraction.ipynb
+++ b/eric_extraction.ipynb
@@ -125,7 +125,7 @@
     "credits_actor.head(1000)\n",
     "\n",
     "# # Save as csv\n",
-    "credits_actor.to_csv('csv_outputs\\credits_actor.csv', index=False)   "
+    "credits_actor.to_csv('csv_outputs\\credits_actor.csv', index=False)   \n"
    ]
   }
  ],
