--- a/extract_transform.ipynb
+++ b/extract_transform.ipynb
@@ -13,10 +13,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dependencies\n",
+    "# Dependencies\n",
     "import pandas as pd\n",
     "import json\n",
-    "import itertools"
+    "# New library\n",
+    "import itertools \n",
+    "# A new library just for fun!\n",
+    "import emoji \n"
    ]
   },
   {
@@ -25,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#retrieve all movies from csv\n",
+    "#Retrieve all movies from csv\n",
     "movies = pd.read_csv(\"Resources/tmdb_5000_movies.csv\")\n",
     "movies.head()"
    ]
@@ -36,10 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#filter for english language movies only\n",
-    "#some foreign language movies titles did not translate characters properly in the origina list\n",
+    "#Filter for english language movies only\n",
+    "#Some foreign language movies titles did not translate characters properly in the original list\n",
     "en_movies = movies[movies[\"original_language\"]==\"en\"]\n",
-    "en_movies"
+    "en_movies.head()"
    ]
   },
   {
@@ -48,10 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create a list of movie ids\n",
-    "movie_id_list = en_movies['id'].tolist()\n",
-    "\n",
-    "print(movie_id_list)"
+    "#Create a list of movie ids\n",
+    "movie_id_list = en_movies['id'].tolist()\n"
    ]
   },
   {
@@ -66,33 +67,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filter for movies in en_movies dataframe\n",
+    "credits= credits_orig[credits_orig['movie_id'].isin(movie_id_list)]\n",
+    "\n",
+    "credits.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "____________"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "credits= credits_orig[credits_orig['movie_id'].isin(movie_id_list)]\n",
-    "\n",
-    "credits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_list =[67373]\n",
-    "test= credits_orig[credits_orig['movie_id'].isin(test_list)]\n",
-    "\n",
-    "print(test['cast'].iloc[0])"
    ]
   },
   {
@@ -142,9 +132,6 @@
     "# Convert ids to integers\n",
     "genres_df['genre_id']=genres_df['genre_id'].astype(int)\n",
     "\n",
-    "# Save as csv\n",
-    "# genres_df.to_csv('csv_outputs\\genres.csv', index=False)\n",
-    "\n",
     "genres_df"
    ]
   },
@@ -161,9 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A new library just for fun!\n",
-    "import emoji \n",
-    "# New DF\n",
+    "# Add emojis to genres df\n",
     "emoji_genres=genres_df.copy()\n",
     "# Create a dictionary emoji aliases\n",
     "emoji_dic = {'Horror':':face_screaming_in_fear:', 'Science Fiction':':alien:', 'Foreign':':globe_showing_europe_africa:', 'Family':':family_man_woman_girl_boy:', 'Action':':person_fencing:', 'Music':':musical_notes:', 'War':':military_medal:', 'Comedy':':rolling_on_the_floor_laughing:', 'Romance':':sparkling_heart:', 'Drama':':performing_arts:', 'Thriller':':bomb:', 'Adventure':':person_climbing:', 'TV Movie':':television:', 'Documentary':':video_camera:', 'Crime':':supervillain:', 'History':':classical_building:', 'Animation':':unicorn:', 'Fantasy':':troll:', 'Mystery':':detective:', 'Western':':cowboy_hat_face:'}\n",
@@ -222,7 +207,7 @@
     "movie_genreids_df.to_csv('csv_outputs\\movieids_genreids.csv', index=False)\n",
     "    \n",
     "# Check first 25 rows of the DataFrame\n",
-    "movie_genreids_df.head(25)\n"
+    "movie_genreids_df.head(10)\n"
    ]
   },
   {
@@ -261,37 +246,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# credits_actor_name = pd.DataFrame()\n",
-    "\n",
-    "# for index, row in credits.iterrows():\n",
-    "#     # Get all actors into a list\n",
-    "#     data = row[\"cast\"]\n",
-    "#     data_list = json.loads(data)\n",
-    "\n",
-    "#     # Get movie id\n",
-    "#     movie_id = row[\"movie_id\"]\n",
-    "\n",
-    "#     # Get top 5 billed actors in list\n",
-    "#     five_list = data_list[:5]\n",
-    "\n",
-    "#     # Get separate lists for id and names of actors\n",
-    "#     actor_id = [sub['id'] for sub in five_list]\n",
-    "#     actor_name = [sub['name'] for sub in five_list]\n",
-    "\n",
-    "#     # Combine lists into data frame by concatenating the top five actors to complete list of actors with credits\n",
-    "#     five_df = pd.DataFrame({'movie_id': movie_id, 'actor_id': actor_id, 'name': actor_name})\n",
-    "#     credits_actor_name = pd.concat([credits_actor_name, five_df], ignore_index=True)\n",
-    "\n",
-    "# # Convert ids to integers\n",
-    "# credits_actor_name['actor_id'] = credits_actor_name['actor_id'].astype(int)\n",
-    "\n",
-    "# # Check df\n",
-    "# credits_actor_name.head(20)\n",
-    "\n",
     "# To get only unique ids in five_list:\n",
-    "import pandas as pd\n",
-    "import json\n",
+    "\n",
     "\n",
     "credits_actor_name = pd.DataFrame()\n",
     "\n",
@@ -303,8 +259,8 @@
     "    # Get movie id\n",
     "    movie_id = row[\"movie_id\"]\n",
     "\n",
-    "    # Initialize an empty set to keep track of seen actor IDs\n",
-    "    seen_ids = set()\n",
+    "    # Initialize an empty set to keep track of actor IDs\n",
+    "    set_ids = set()\n",
     "\n",
     "    # Initialize an empty list to store unique actor data\n",
     "    unique_actors = []\n",
@@ -314,14 +270,13 @@
     "        actor_id = actor['id']\n",
     "        actor_name = actor['name']\n",
     "\n",
-    "        # Check if actor_id is not in seen_ids\n",
-    "        if actor_id not in seen_ids:\n",
-    "            # Add actor_id to seen_ids\n",
-    "            seen_ids.add(actor_id)\n",
-    "            # Append the unique actor data to unique_actors\n",
+    "        if actor_id not in set_ids:\n",
+    "            # Add actor_id\n",
+    "            set_ids.add(actor_id)\n",
+    "            # Append actor data to unique_actors\n",
     "            unique_actors.append({'id': actor_id, 'name': actor_name})\n",
     "\n",
-    "        # Break the loop if we have 5 unique actors\n",
+    "        # Stop the loop if we have 5 unique actors\n",
     "        if len(unique_actors) == 5:\n",
     "            break\n",
     "\n",
@@ -339,7 +294,7 @@
     "credits_actor_name['actor_id'] = credits_actor_name['actor_id'].astype(int)\n",
     "\n",
     "# Check df\n",
-    "credits_actor_name\n"
+    "credits_actor_name.head(10)\n"
    ]
   },
   {
@@ -360,7 +315,7 @@
     "# Save as csv\n",
     "credits_actor_df.to_csv('csv_outputs\\credits_actor.csv', index=False)   \n",
     "\n",
-    "credits_actor_df.head(25)"
+    "credits_actor_df.head(10)"
    ]
   },
   {
@@ -498,7 +453,6 @@
     "            # Get separate lists for id of directors\n",
     "            director_ids.append(crew_member.get('id'))\n",
     "\n",
-    "            \n",
     "   # Create a DataFrame for the current movie ID and director IDs\n",
     "    movie_director = pd.DataFrame({'movie_id': [movie_id] * len(director_ids), 'director_id': director_ids})\n",
     "    \n",
@@ -513,7 +467,7 @@
     "movieid_directorid_df.to_csv('csv_outputs\\movieids_director_ids.csv', index=False)\n",
     "    \n",
     "# Check first 25 rows of the DataFrame\n",
-    "movieid_directorid_df.head(10)"
+    "movieid_directorid_df.head(10)\n"
    ]
   },
   {
@@ -537,9 +491,9 @@
     "    keywords = json.loads(row)\n",
     "    ids_keyword.update((i['id'], i['name']) for i in keywords)\n",
     "\n",
-    "\n",
-    "# Print ids and genre lists\n",
-    "print(ids_keyword)"
+    "# Print the first 10 in set containing keyword ids and keywords\n",
+    "for id, keyword in itertools.islice(ids_keyword, 10):\n",
+    "    print(f\"{id}: {keyword}\")"
    ]
   },
   {
@@ -557,14 +511,14 @@
     "# Save as csv\n",
     "keywords_df.to_csv('csv_outputs\\keywords.csv', index=False)\n",
     "\n",
-    "keywords_df"
+    "keywords_df.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Dataframe for movie Ids and Keyword Ids"
+    "### Create Dataframe for Movie Ids and Keyword Ids"
    ]
   },
   {
@@ -631,8 +585,6 @@
     "# Create Director Dataframe\n",
     "movies_df = pd.DataFrame(data=(data))\n",
     "\n",
-    "# Convert revenue into dollars\n",
-    "\n",
     "# Convert ids to integers\n",
     "movies_df['movie_id']=movies_df['movie_id'].astype(int)\n",
     "\n",
@@ -646,11 +598,17 @@
     "# Drop the original release date column\n",
     "movies_df.drop(columns=['release_date_str'], inplace=True)\n",
     "\n",
-    "\n",
     "# Save as csv\n",
     "movies_df.to_csv('csv_outputs\\movies.csv', index=False)\n",
     "\n",
     "movies_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "______________"
    ]
   }
  ],
