DBD with new decimals

--- a/extract_transform.ipynb
+++ b/extract_transform.ipynb
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "# To get only unique ids in five_list:\n",
-    "\n",
+    "# Actors may star as two or more characters in a single movie\n",
     "\n",
     "credits_actor_name = pd.DataFrame()\n",
     "\n",
@@ -310,6 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Create DF without names\n",
     "credits_actor_df = credits_actor_name.drop(columns=['name'])\n",
     "\n",
     "# Save as csv\n",
